--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-13 Mon 15:15]
+#+CAPTION: Clock summary at [2017-03-13 Mon 15:50]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *35:20* |       |      | 100.0 |
+| *Total time*                                                                | *35:54* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 35:20   |       |      | 100.0 |
-| Active                                                                      |         | 35:20 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:01 |   2.9 |
+| Stories                                                                     | 35:54   |       |      | 100.0 |
+| Active                                                                      |         | 35:54 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:01 |   2.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:26 |   1.2 |
-| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |   8.4 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  14.3 |
-| COMPLETED Split include and source directories                              |         |       | 5:22 |  15.2 |
-| COMPLETED Add C++-03 mode                                                   |         |       | 8:19 |  23.5 |
-| COMPLETED Add a LAM test model just to validate existing functionality      |         |       | 2:38 |   7.5 |
+| COMPLETED Add test model for path meta-data                                 |         |       | 2:58 |   8.3 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       | 5:04 |  14.1 |
+| COMPLETED Split include and source directories                              |         |       | 5:22 |  14.9 |
+| COMPLETED Add C++-03 mode                                                   |         |       | 8:19 |  23.2 |
+| COMPLETED Add a LAM test model just to validate existing functionality      |         |       | 2:38 |   7.3 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       | 0:11 |   0.5 |
 | STARTED Build on tags for Windows                                           |         |       | 0:15 |   0.7 |
 | STARTED Add a "flat directory" mode                                         |         |       | 0:08 |   0.4 |
 | STARTED Handling of visual studio projects and solutions is incorrect       |         |       | 1:11 |   3.3 |
-| STARTED Implement the database model using Northwind                        |         |       | 7:47 |  22.0 |
+| STARTED Implement the database model using Northwind                        |         |       | 8:21 |  23.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -379,6 +379,7 @@ includes. There are some differences though:
   Visual Studio element we have visibility of all enabled versions.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-03-13 Mon 15:16]--[2017-03-13 Mon 15:50] =>  0:34
     CLOCK: [2017-03-13 Mon 13:54]--[2017-03-13 Mon 15:15] =>  1:21
     CLOCK: [2017-03-13 Mon 13:35]--[2017-03-13 Mon 13:53] =>  0:18
     CLOCK: [2017-03-13 Mon 11:02]--[2017-03-13 Mon 11:25] =>  0:23
