--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-14 Tue 18:35]
+#+CAPTION: Clock summary at [2017-03-14 Tue 21:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:02* |       |       | 100.0 |
+| *Total time*                                                                | *43:05* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:02   |       |       | 100.0 |
-| Active                                                                      |         | 43:02 |       | 100.0 |
+| Stories                                                                     | 43:05   |       |       | 100.0 |
+| Active                                                                      |         | 43:05 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   1.0 |
 | COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.9 |
@@ -28,12 +28,13 @@
 | COMPLETED Split include and source directories                              |         |       |  5:22 |  12.5 |
 | COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  19.3 |
 | COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   6.1 |
+| COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.7 |
+| COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.6 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
 | STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.7 |
-| STARTED Implement the database model using Northwind                        |         |       | 15:11 |  35.3 |
-| STARTED Split project should not include model name                         |         |       |  0:18 |   0.7 |
+| STARTED Implement the database model using Northwind                        |         |       | 15:11 |  35.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -251,6 +252,23 @@ At present we have basic support for LAM. We should create a simple
 test model that uses a few of the mapped types just to make sure it
 vaguely works and does not
 
+*** COMPLETED Split project should not include model name             :story:
+    CLOSED: [2017-03-14 Tue 21:18]
+    CLOCK: [2017-03-14 Tue 17:53]--[2017-03-14 Tue 18:11] =>  0:18
+
+When we supply the C++ header output path, we should not add the model
+name to it.
+
+We should also omit the =include= directory too.
+
+*** COMPLETED Always add multiple databases to ODB options            :story:
+    CLOSED: [2017-03-14 Tue 21:25]
+    CLOCK: [2017-03-14 Tue 21:22]--[2017-03-14 Tue 21:25] =>  0:03
+
+At present we only add multiple databases when the user requests more
+than one database system. However, since we are asking for "common"
+this is causing problems. Always add this flag.
+
 *** STARTED Check for incompatibility between input language and enabled kernels :story:
     CLOCK: [2017-03-06 Mon 22:20]--[2017-03-06 Mon 22:31] =>  0:11
 
@@ -427,14 +445,6 @@ Notes:
 : set linesize 8192
 : set pagesize 50000
 
-*** STARTED Split project should not include model name               :story:
-    CLOCK: [2017-03-14 Tue 17:53]--[2017-03-14 Tue 18:11] =>  0:18
-
-When we supply the C++ header output path, we should not add the model
-name to it.
-
-We should also omit the =include= directory too.
-
 *** Setting include and source directory to empty                     :story:
 
 At present it does not seem possible to set either the include or
@@ -456,12 +466,6 @@ The "c++-" seems a bit redundant.
 Previously we were automatically adding the ODB pragma =no_id= to
 objects that had no primary key set. This no longer seems to be
 happening.
-
-*** Always add multiple databases to ODB options                      :story:
-
-At present we only add multiple databases when the user requests more
-than one database system. However, since we are asking for "common"
-this is causing problems. Always add this flag.
 
 *** Ignore ODB files automatically                                    :story:
 
