--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-14 Tue 22:10]
+#+CAPTION: Clock summary at [2017-03-14 Tue 22:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:35* |       |       | 100.0 |
+| *Total time*                                                                | *43:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:35   |       |       | 100.0 |
-| Active                                                                      |         | 43:35 |       | 100.0 |
+| Stories                                                                     | 43:55   |       |       | 100.0 |
+| Active                                                                      |         | 43:55 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   1.0 |
 | COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.8 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  11.6 |
-| COMPLETED Split include and source directories                              |         |       |  5:22 |  12.3 |
-| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  19.1 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  11.5 |
+| COMPLETED Split include and source directories                              |         |       |  5:22 |  12.2 |
+| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  18.9 |
 | COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   6.0 |
 | COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.7 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
@@ -34,7 +34,7 @@
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.6 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
 | STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.7 |
-| STARTED Implement the database model using Northwind                        |         |       | 15:41 |  36.0 |
+| STARTED Implement the database model using Northwind                        |         |       | 16:01 |  36.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -398,6 +398,7 @@ includes. There are some differences though:
   Visual Studio element we have visibility of all enabled versions.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-03-14 Tue 22:11]--[2017-03-14 Tue 22:31] =>  0:20
     CLOCK: [2017-03-14 Tue 21:40]--[2017-03-14 Tue 22:10] =>  0:30
     CLOCK: [2017-03-14 Tue 18:11]--[2017-03-14 Tue 18:35] =>  0:24
     CLOCK: [2017-03-14 Tue 06:40]--[2017-03-14 Tue 07:21] =>  0:41
