--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,28 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-14 Tue 22:32]
+#+CAPTION: Clock summary at [2017-03-17 Fri 10:58]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:55* |       |       | 100.0 |
+| *Total time*                                                                | *46:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:55   |       |       | 100.0 |
-| Active                                                                      |         | 43:55 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   1.0 |
-| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.8 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  11.5 |
-| COMPLETED Split include and source directories                              |         |       |  5:22 |  12.2 |
-| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  18.9 |
-| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   6.0 |
-| COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.7 |
+| Stories                                                                     | 46:36   |       |       | 100.0 |
+| Active                                                                      |         | 46:36 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.9 |
+| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.4 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.9 |
+| COMPLETED Split include and source directories                              |         |       |  5:22 |  11.5 |
+| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  17.8 |
+| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.7 |
+| COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.6 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
+| STARTED Fix issues with dropbox downloads                                   |         |       |  1:56 |   4.1 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
-| STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.6 |
+| STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.5 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
-| STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.7 |
-| STARTED Implement the database model using Northwind                        |         |       | 16:01 |  36.5 |
+| STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.5 |
+| STARTED Implement the database model using Northwind                        |         |       | 16:46 |  36.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -269,6 +270,20 @@ At present we only add multiple databases when the user requests more
 than one database system. However, since we are asking for "common"
 this is causing problems. Always add this flag.
 
+*** STARTED Fix issues with dropbox downloads                         :story:
+    CLOCK: [2017-03-17 Fri 10:52]--[2017-03-17 Fri 10:58] =>  0:06
+    CLOCK: [2017-03-17 Fri 09:01]--[2017-03-17 Fri 10:51] =>  1:50
+
+For some reason our access to the dropbox public folder is no longer
+working. We need to reinstate it or all our builds will remain red and
+we won't be able to release over the weekend.
+
+New links:
+
+- https://www.dropbox.com/s/28uz0mqvih5g3su/dogen_deps_clang_7_3_0_osx_amd64.tar.bz2
+- https://www.dropbox.com/s/axf22srjkiltvr7/dogen_deps_gcc_5.3_linux_amd64_v8.bz2
+- https://www.dropbox.com/s/ntz6moq7kg9a8m7/dogen_deps_vc14_windows_amd64_v4.7z
+
 *** STARTED Check for incompatibility between input language and enabled kernels :story:
     CLOCK: [2017-03-06 Mon 22:20]--[2017-03-06 Mon 22:31] =>  0:11
 
@@ -442,6 +457,7 @@ Tasks:
   explained in [[http://www.codesynthesis.com/pipermail/odb-users/2013-May/001286.html][this email]]. We can force it by doing a query on that
   entity, but that then causes an exception.
 - =head -n 200 northwind_ascii.sql | grep ^INSERT | cut -b 1-150 | uniq=
+- paper: [[http://eduglopedia.org/resource/cea008e18dee42899aeff7a0c58dddaf8e9b5bc6/download][Adapting the Access Northwind Database to Support a Database Course]]
 
 Notes:
 
