--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-17 Fri 10:58]
+#+CAPTION: Clock summary at [2017-03-17 Fri 11:13]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *46:36* |       |       | 100.0 |
+| *Total time*                                                                | *46:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 46:36   |       |       | 100.0 |
-| Active                                                                      |         | 46:36 |       | 100.0 |
+| Stories                                                                     | 46:50   |       |       | 100.0 |
+| Active                                                                      |         | 46:50 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.9 |
-| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.4 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.9 |
+| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   6.3 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.8 |
 | COMPLETED Split include and source directories                              |         |       |  5:22 |  11.5 |
 | COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  17.8 |
-| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.7 |
+| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.6 |
 | COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.6 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
-| STARTED Fix issues with dropbox downloads                                   |         |       |  1:56 |   4.1 |
+| STARTED Fix issues with dropbox downloads                                   |         |       |  2:10 |   4.6 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.5 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
 | STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.5 |
-| STARTED Implement the database model using Northwind                        |         |       | 16:46 |  36.0 |
+| STARTED Implement the database model using Northwind                        |         |       | 16:46 |  35.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -271,6 +271,7 @@ than one database system. However, since we are asking for "common"
 this is causing problems. Always add this flag.
 
 *** STARTED Fix issues with dropbox downloads                         :story:
+    CLOCK: [2017-03-17 Fri 10:59]--[2017-03-17 Fri 11:13] =>  0:14
     CLOCK: [2017-03-17 Fri 10:52]--[2017-03-17 Fri 10:58] =>  0:06
     CLOCK: [2017-03-17 Fri 09:01]--[2017-03-17 Fri 10:51] =>  1:50
 
